--- a/.github/workflows/trigger-sync.yaml
+++ b/.github/workflows/trigger-sync.yaml
@@ -7,8 +7,11 @@ on:
 
 jobs:
   trigger-sync:
-    uses: ./.github/workflows/sync-main-into-prs.yaml
-    with:
-        base_branch: main
-        dry_run: true
-        require_auto_merge: true
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run Action
+        uses: ./action.yaml
+        with:
+          base_branch: main
+          dry_run: true
+          require_auto_merge: true
