--- a/.github/workflows/trigger-sync.yaml
+++ b/.github/workflows/trigger-sync.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Composite Action
-        uses: ./.github/workflows/sync-main-into-prs.yaml
+        uses: ./action.yaml
         with:
           base_branch: main
           dry_run: true
