--- a/.github/workflows/trigger-sync.yml
+++ b/.github/workflows/trigger-sync.yml
@@ -17,5 +17,5 @@ jobs:
         with:
           base_branch: main
           dry_run: true
-          require_auto_merge: true
+          require_auto_merge: false
           github_token: ${{ secrets.GITHUB_TOKEN }}
