--- a/.github/workflows/trigger-sync.yml
+++ b/.github/workflows/trigger-sync.yml
@@ -16,6 +16,6 @@ jobs:
         uses: mizx/branch-pr-sync-base@main
         with:
           base_branch: main
-          dry_run: true
+          dry_run: false
           require_auto_merge: false
           github_token: ${{ secrets.GITHUB_TOKEN }}
